AUTOMAKE_OPTIONS = subdir-objects
sss_SOURCES  = sss.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c

relay_SOURCES = relay.c ../tlv.c ../service.c

controller_SOURCES = controller.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c

device_SOURCES = device.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c

bin_PROGRAMS = sss relay controller device
