AUTOMAKE_OPTIONS = subdir-objects
sss_SOURCES  = sss.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c ../talk2ca.c

relay_SOURCES = relay.c ../tlv.c ../service.c ../talk2ca.c

controller_SOURCES = controller.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c ../talk2ca.c

device_SOURCES = device.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c ../talk2ca.c

bin_PROGRAMS = sss relay controller device
