AUTOMAKE_OPTIONS = subdir-objects
controller_SOURCES = controller.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c ../talk2ca.c

device_SOURCES = device.c ../dpp.c ../pkex.c ../service.c ../hkdf.c ../tlv.c ../aes_siv.c ../jsmn.c ../utils.c ../talk2ca.c

bin_PROGRAMS = controller device
